# EmbCom-Python

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ext/: CMakeLists.txt
include/: SerialBuffer.hpp
src/: EmbComPython.cpp  example.cpp
